--- a/config
+++ b/config
@@ -1,4 +1,5 @@
 30 1 /bin/run_me_daily
 45 * /bin/run_me_hourly
 * * /bin/run_me_every_minute
+oijwa 3jipa powakjefpok
 * 19 /bin/run_me_sixty_times
