--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/connorjburton/cron/issues"
   },
-  "homepage": "https://github.com/connorjburton/cron#readme"
+  "homepage": "https://github.com/connorjburton/cron#readme",
+  "devDependencies": {
+    "jest": "^24.9.0"
+  }
 }
