starting on tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,19 @@
             ],
             "program": "${workspaceFolder}\\index.js",
             "args": ["16:10", "<", "./config"]
-        }
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Jest All",
+            "program": "${workspaceFolder}/node_modules/.bin/jest",
+            "args": ["--runInBand"],
+            "console": "integratedTerminal",
+            "internalConsoleOptions": "neverOpen",
+            "disableOptimisticBPs": true,
+            "windows": {
+                "program": "${workspaceFolder}/node_modules/jest/bin/jest",
+            }
+            }
     ]
 }
