writing most of the tests and fixing lots of bugs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,8 +19,7 @@
             "request": "launch",
             "name": "Jest All",
             "program": "${workspaceFolder}/node_modules/.bin/jest",
-            "args": ["--runInBand"],
-            "console": "integratedTerminal",
+            "args": ["--runInBand", "--detectOpenHandles"],
             "internalConsoleOptions": "neverOpen",
             "disableOptimisticBPs": true,
             "windows": {
