adding number filename example to config

--- a/config
+++ b/config
@@ -2,5 +2,6 @@
 45 * /bin/run_me_hourly
 * * /bin/run_me_every_minute
 * 19 /bin/run_me_sixty_times
+* 19 /bin/run_ff2me_s45ixty_times
 10 * /a/b/c
 oijwa 3jipa powakjefpok
